tests/NormalTests/paczka2/big_fuzzy/46758764.err
Error in line 5: dmwLl S978 32,3
Error in line 6: dmwLl S137 40,5
Error in line 1: IYK1rfdQ7Y S137 29,7
Error in line 4: S625 S625 100,0
Error in line 7: dmwLl A600 99,7
Error in line 12: 9t4D1e S978 71,6
Error in line 19: 6ovW S625 45,6
Error in line 34: 6ovW S137 23,8
Error in line 31: dmwLl S978 69,7
Error in line 41: IYK1rfdQ7Y S137 356,5
Error in line 46: IYK1rfdQ7Y S978 5,1
Error in line 48: 6ovW S978 10,7
Error in line 57: TcZvAuX3VCE A600 9,9
Error in line 62: S625 S625 92,7
Error in line 63: 9t4D1e S978 44,7
Error in line 70: 9t4D1e S625 11,1
Error in line 74: IYK1rfdQ7Y S625 39,2
Error in line 77: IYK1rfdQ7Y S137 30,8
Error in line 78: PpBkBq S137 44,5
Error in line 83: 6ovW S625 28,1
Error in line 75: 9t4D1e A600 12,4
Error in line 94: IYK1rfdQ7Y S625 85,15
Error in line 102: PpBkBq S978 2,9
Error in line 103: PpBkBq S137 46,7
Error in line 108: PpBkBq A600 47,0
Error in line 122: PpBkBq S137 12,8
Error in line 132: S625 S625 92,4
Error in line 135: 9t4D1e S625 -1,4
Error in line 129: TcZvAuX3VCE A600 87,9
Error in line 139: S625 S978 148,8
Error in line 141: TcZvAuX3VCE S137 48,1
Error in line 142: PpBkBq S978 32,9
Error in line 151: PpBkBq S978 78,9
Error in line 154: PpBkBq A600 20,4
Error in line 158: S625 S978 81,1
Error in line 161: S625 A600 91,6
Error in line 166: PpBkBq S978 68,0
Error in line 167: 9t4D1e S137 47,5
Error in line 185: IYK1rfdQ7Y S137 3,4
Error in line 178: S625 A600 64,3
Error in line 190: S625 S625 20,3
Error in line 198: dmwLl S978 75,3
Error in line 204: dmwLl A600 2,5
Error in line 210: dmwLl S137 63,4
Error in line 217: 6ovW S978 27,2
Error in line 225: 9t4D1e S625 240,6
Error in line 227: TcZvAuX3VCE S978 21,1
Error in line 231: TcZvAuX3VCE A600 34,9
Error in line 235: TcZvAuX3VCE S978 82,9
Error in line 237: TcZvAuX3VCE S137 47,3
Error in line 238: dmwLl S137 4,7
Error in line 234: 9t4D1e S978 71,4
